--- a/netlify.toml
+++ b/netlify.toml
@@ -1,25 +1,16 @@
-# Simple static site configuration for Netlify
 [build]
   publish = "."
 
-# Auto-deploy settings
-[build.environment]
-  NETLIFY_USE_YARN = "false"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  conditions = {Role = ["admin", "user"]}
+  force = false
 
-# Headers for security
 [[headers]]
   for = "/*"
   [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
-
-# Deploy contexts for auto-deploy
-[context.production]
-  publish = "."
-
-[context.deploy-preview]
-  publish = "."
-
-[context.branch-deploy]
-  publish = "."
