--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,6 @@
 [build]
+  command = ""
   publish = "."
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  conditions = {Role = ["admin", "user"]}
-  force = false
 
 [[headers]]
   for = "/*"
