--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
+# Static HTML site - no build needed
 [build]
-  command = ""
+  command = "echo 'No build needed for static HTML'"
   publish = "."
+
+# Disable Next.js plugin
+[build.environment]
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
 
 [[headers]]
   for = "/*"
@@ -8,3 +13,11 @@
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
+    Cache-Control = "public, max-age=3600"
+
+# Serve index.html for all routes
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = false
